--- a/index.html
+++ b/index.html
@@ -5,21 +5,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/style.css">
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <title>Document</title>
 </head>
 
 <body>
 
-    <div id="map"></div>
+        <input id="location" type="text" name="firstname" placeholder="Location"><br>
+        <button id="submit" type="submit" value="Submit">Search</button>
+
+    <div id="map">
     <!-- Replace the value of the key parameter with your own API key. -->
 
-    <script src="map.js"></script>
+    <script src="assets/placeSearch.js"></script>
+<script
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDxTdbiQM9NRtUgYe3cYN86iuXIleDgb04
+&libraries=places&callback=initMap"
+    async defer></script>
 
-    <script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCot65b7E_0r67p-9ubOAfzZliGsX_3LRY&callback=initMap"></script>
-
-
+        </div>
 
 </body>
 
