--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
   <link rel="stylesheet" href="assets/css/style.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <title>Project-1</title>
-  <link rel="stylesheet" href="assets/css/style.css" />
+  <link rel="stylesheet" href="assets/css/weatherstyle.css" />
+  <link rel="stylesheet" href="assets/mainstyle.css" />
 </head>
 
 <body>
@@ -135,21 +136,26 @@
                       <button id="submitCity" class="btn btn-primary" class="fa fa-question-circle">Search</button>
 
                     </div>
-                    <div id="showWeather">
-                      <!-- data apppears here -->
-                    </div>
                   </div>
               </nav>
+
+              <div id="showWeather">
+                <div class="weather-icon">
+                  <img id="icon" src="https://media1.giphy.com/media/3ov9jCEFMBtCy54q6Q/giphy.gif" alt="">
+                </div>
+              </div>
+              <div class="footer" style="text-align: center">
+                <a href="http://www.openweathermap.org" target="_blank"> <button class="btn btn-success">Weather Origin
+                    <button></a></<a>
+                <a href="../teamp1/Weekly Forecast/forecast.html" target="_blank"><button class="btn btn-success">Weekly
+                    Forcast</button></a>
+              </div>
+              <div class="content">
+                <!-- Content -->
+              </div>
             </div>
-          </div>
-        </div>
+      </article>
     </div>
-    <div class="content">
-      <!-- Content -->
-    </div>
-  </div>
-  </article>
-  </div>
   </div>
   <!-- footer -->
   <footer class="footer">
