--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.min.css">
   <!-- <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script> -->
-  <link rel="stylesheet" href="assets/css/style.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <title>Project-1</title>
-  <link rel="stylesheet" href="assets/css/weatherstyle.css" />
+  <link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" href="assets/mainstyle.css" />
+  <link rel="stylesheet" href="assets/css/weatherstyle.css" />
 </head>
 
 <body>
@@ -64,7 +64,7 @@
       <div class="tile">
       </div>
       <div class="tile is-parent">
-        <article class="tile is-child notification is-danger">
+        <article class="tile is-child notification is-danger m-box">
           <p class="title">Zip Code</p>
           <div class="level-item">
             <div class="field has-addons">
@@ -112,11 +112,8 @@
       </div>
     </div>
 
-
-
-
-    <div class="tile is-parent">
-      <article class="tile is-child notification is-success">
+    <div class="tile is-parent ">
+      <article class="tile is-child notification w-box is-success">
         <div class="content">
           <p class="title">zip code</p>
           <div class=“container”>
@@ -144,7 +141,7 @@
                   <img id="icon" src="https://media1.giphy.com/media/3ov9jCEFMBtCy54q6Q/giphy.gif" alt="">
                 </div>
               </div>
-              <div class="footer" style="text-align: center">
+              <div class="footer " style="text-align: center">
                 <a href="http://www.openweathermap.org" target="_blank"> <button class="btn btn-success">Weather Origin
                     <button></a></<a>
                 <a href="../teamp1/Weekly Forecast/forecast.html" target="_blank"><button class="btn btn-success">Weekly
