Removed some unneccesery buttons

--- a/index.html
+++ b/index.html
@@ -119,11 +119,11 @@
 
     <!-- <div class="tile is-parent"> -->
     <!-- <article class="tile is-child notification is-success"> -->
-    <p class="title">Weather</p>
+    <!-- <p class="title">Weather</p> -->
     <div class=“container”>
       <div class=“app-title”>
         <!-- <h3>Weather</h3> -->
-        <nav class="navbar navbar-default" id="nav_bar">
+        <!-- <nav class="navbar navbar-default" id="nav_bar">
           <div class="container" style="height:95px;">
             <div class="row">
               <div class="col-md-12" style="margin-bottom:10px;">
@@ -138,16 +138,18 @@
 
               </div>
             </div>
-        </nav>
+        </nav> -->
+
+        <div class="littleNav" style="text-align: center">
+          <a href="http://www.openweathermap.org" target="_blank"> <button class="btn btn-success">Weather Origin
+          </button></a>
+          <a href="../teamp1/Weekly Forecast/forecast.html" target="_blank"><button class="btn btn-primary">Weekly
+              Forcast</button></a>
+        </div>
 
         <div id="showWeather">
         </div>
-        <div class="footer" style="text-align: center">
-          <a href="http://www.openweathermap.org" target="_blank"> <button class="btn btn-success">Weather Origin
-          </button></a>
-          <a href="../teamp1/Weekly Forecast/forecast.html" target="_blank"><button class="btn btn-success">Weekly
-              Forcast</button></a>
-        </div>
+       
 
       </div>
       </article>
