staging to merge with master

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                                         <div class=“littleNav” style="align-content: center">
                                                 <a href=“http://www.openweathermap.org” target=“_blank”> <button class=“btn btn-success”>Weather Origin <i class="fas fa-globe"></i>
                                                 </button></a>
-                                                <a href=“../teamp1/WeeklyForecast/forecast.html” target=“_blank”><button class=“btn btn-primary”>Weekly
+                                                <a href="./weeklyforecast/forecast.html" target=“_blank”><button class=“btn btn-primary”>Weekly
                                                     Forcast <i class="fas fa-cloud"></i></button></a>
                                               </div>
                                         <div class="row form-group form-inline" id="cityDiv">
